# NonlinearSHE

./: .gitignore  CMakeLists.txt  DivisionNet.py  README.md
deprecated/: :w  Yashe.h  divisionOptimization.cpp  main.cpp  make  out  test_yashe.h
examples/: CMakeLists.txt
examples/FHEImageProcessing/: CMakeLists.txt
examples/FHEImageProcessing/modulus/: FindCImg.cmake
examples/FHEImageProcessing/resources/: 8BitFHE
examples/FHEImageProcessing/src/: RGBtoYCbCr.cpp  imageTransform.cpp  mean.cpp
imageProcessing/: .imageFunctions.hpp.swp  .test.cpp.swp  RGBtoYCbCr_test.cpp  imageFunctions.cpp  imageFunctions.hpp  imageTransform_test.cpp  test.cpp
include/YASHE/: .YASHE.hpp.swp  YASHE.hpp  cipherText.hpp  functions.hpp
modules/: FindCImg.cmake  FindNTL.cmake
paper/: biblio.bib  division.aux  division.bbl  division.blg  division.tex  paper.tex
serialization/: FFTRep.hpp  ZZ.hpp  ZZX.hpp  ZZ_p.hpp  ZZ_pX.hpp  ZZ_pXModulus.hpp
source/: cipherText.cpp  cipherText.hpp  functions.cpp  functions.hpp  numberTheory.cpp  numberTheory.hpp  yashe.cpp  yashe.hpp
src/: cipherText.cpp  functions.cpp  numberTheory.cpp  yashe.cpp
test/: .yashe_test.cpp.swp  functions_test.cpp  numberTheory_test.cpp  timing_test.cpp  yashe_test.cpp
tests/: functions_test.cpp  numberTheory_test.cpp  yashe_test.cpp
unitTests/: functions_test.cpp  numberTheory_test.cpp  yashe_test.cpp
